# NewPipeWeb

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  build.gradle.kts  gradle.properties  settings.gradle.kts
backend/src/main/kotlin/com/newpipeweb/: Application.kt  NewPipeDownloader.kt
backend/src/main/kotlin/com/newpipeweb/database/: DatabaseFactory.kt
backend/src/main/kotlin/com/newpipeweb/models/: Models.kt
backend/src/main/kotlin/com/newpipeweb/plugins/: CORS.kt  Routing.kt
backend/src/main/kotlin/com/newpipeweb/routes/: DownloadRoutes.kt  LocalRoutes.kt  StorageSettingsRoutes.kt  (+2 more)
backend/src/main/resources/: logback.xml
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  sponsorblock.ts
frontend/src/components/common/: ServiceSelector.tsx  index.tsx
frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/src/components/playlist/: AddToPlaylistModal.tsx
frontend/src/components/video/: VideoCard.tsx  VideoGrid.tsx
frontend/src/hooks/: index.ts  useSponsorBlock.ts
frontend/src/pages/: Channel.tsx  Downloads.tsx  Feed.tsx  History.tsx  Home.tsx  Library.tsx  PlaylistView.tsx  Search.tsx  Settings.tsx  Subscriptions.tsx  Watch.tsx  Watchlist.tsx
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: playback.ts
(+6 files in other folders)
